fixed conflicts but modal still hiding behind on remix card

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,8 +51,8 @@
     line-height: 1.4;
     opacity: 0.7;
     margin-bottom: 0;
-    margin-top: 8px;
-    color: white;
+    margin-top: 2px;
+    color: black;
   }
   .song-card-infos {
     // padding: 16px 16px;
